--- a/package.json
+++ b/package.json
@@ -1,10 +1,26 @@
 {
-  "name": "${PROJECT_NAME}",
+  "name": "phone-crawler",
   "version": "1.0.0",
-  "description": "",
+  "description": "Phone listings crawler for list.am",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node index.js",
+    "server": "node server/app.js",
+    "crawl": "node crawler.js",
+    "crawl-manual": "node index.js crawl",
+    "crawl-price": "node crawler.js",
+    "stats": "node index.js stats",
+    "test": "node index.js test",
+    "test-normalization": "node test-normalization.js",
+    "test-advanced-normalization": "node test-advanced-normalization.js",
+    "test-multi-category": "node test-multi-category-normalization.js"
+  },
+  "dependencies": {
+    "axios": "^1.11.0",
+    "cheerio": "1.0.0-rc.10",
+    "express": "^4.18.2",
+    "cors": "^2.8.5",
+    "puppeteer": "^22.15.0"
   },
   "private": true
 }
