--- a/package.json
+++ b/package.json
@@ -13,13 +13,16 @@
     "test": "node index.js test",
     "test-normalization": "node test-normalization.js",
     "test-advanced-normalization": "node test-advanced-normalization.js",
-    "test-multi-category": "node test-multi-category-normalization.js"
+    "test-multi-category": "node test-multi-category-normalization.js",
+    "setup-cron": "./setup-cron.sh",
+    "test-cron": "node cron-daily-crawl.js"
   },
   "dependencies": {
     "axios": "^1.11.0",
     "cheerio": "1.0.0-rc.10",
-    "express": "^4.18.2",
     "cors": "^2.8.5",
+    "express": "^4.18.2",
+    "node-cron": "^4.2.1",
     "puppeteer": "^22.15.0"
   },
   "private": true
