--- a/package.json
+++ b/package.json
@@ -11,9 +11,6 @@
     "crawl-price": "node crawler.js",
     "stats": "node index.js stats",
     "test": "node index.js test",
-    "test-normalization": "node test-normalization.js",
-    "test-advanced-normalization": "node test-advanced-normalization.js",
-    "test-multi-category": "node test-multi-category-normalization.js",
     "setup-cron": "./setup-cron.sh",
     "test-cron": "node cron-daily-crawl.js"
   },
@@ -21,6 +18,7 @@
     "axios": "^1.11.0",
     "cheerio": "1.0.0-rc.10",
     "cors": "^2.8.5",
+    "dotenv": "^17.2.2",
     "express": "^4.18.2",
     "node-cron": "^4.2.1",
     "puppeteer": "^22.15.0"
